envs/multi-site/site-b/manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-manager-ingress
  namespace: site-b
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: "nginx"
  rules:
    - host: wazuh.itm.home
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 55000
          - path: /registration(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 1515
          - path: /reporting(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wazuh
                port:
                  number: 1514
